<resources>
    <string name="app_name" translatable="false">WeathApp</string>
    <string name="hello">Hello!</string>
    <string name="tip">click the text above</string>
    <string name="go_btn">Weather</string>
    <string name="city1_btn">Moscow</string>
    <string name="city2_btn">Los Angeles</string>
    <string name="city3_btn">Verona</string>

    <string name="city1_vh">Moscow</string>
    <string name="city2_vh">Paris</string>
    <string name="city3_vh">Barcelona</string>
    <string name="city4_vh">New York</string>
    <string name="back_btn">Back</string>
    <string name="details">Details</string>
    <string name="city_image">City photo</string>
    <string name="weather_icon">Weather icon</string>
    <string name="snackBar">For more press Details or</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="weathapp" translatable="false">WeathApp</string>
    <string name="website_text">Developer\'s website:</string>
    <string name="website" translatable="false"><u>http://d91511ib.beget.tech</u></string>
    <string name="version_0_0_7">version_0_0_7</string>
    <string name="app_icon_desc">App icon</string>
    <string name="dark_theme">Dark Theme</string>
</resources>
