<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <Button
        android:id="@+id/btnCity1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city1_btn" />

    <Button
        android:id="@+id/btnCity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city2_btn" />

    <Button
        android:id="@+id/btnCity3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city3_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>